# motion-planner

./: .gitignore  README.md  scene.json
.github/workflows/: ci.yml
motion_planner/: CMakeLists.txt  README.md
motion_planner/src/collision/: collision_checker.hpp  contact.hpp
motion_planner/src/geometry/: distance.hpp
motion_planner/src/io/: logger.hpp
motion_planner/src/kinematics/: fk.hpp
motion_planner/src/math/: quat.hpp
motion_planner/src/planner/: rrtstar.hpp
motion_planner/src/trajopt/: trajopt.hpp
motion_planner/tests/: test_distance.cpp  test_normals.cpp
motion_planner/tools/: render.py
src/: main.cpp
src/collision/: collision_checker.cpp
src/geometry/: distance.hpp  primitives.hpp
src/io/: logger.cpp  scene_loader.cpp  scene_loader.hpp
src/kinematics/: fk.cpp
src/math/: vec3.hpp
src/planner/: rrtstar.cpp  rrtstar.hpp
src/trajopt/: trajopt.cpp
tests/: test_finite_diff.cpp
tools/: render.py  viewer.py
